--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL=""
+DATABASE_URL="postgresql://username:secret_password@localhost:5432/database_name"
