chore: configure connection to supabase postgres db

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,7 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://username:secret_password@localhost:5432/database_name"
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL="postgresql://username:secret_password@localhost:5432/database_name?pgbouncer=true"
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="postgresql://username:secret_password@localhost:5432/database_name"
