test: add unit tests

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -64,6 +64,18 @@ jobs:
           key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
       - run: npm run typecheck
 
+  unit-tests:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore node_modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+      - run: npm run test
+
   build:
     # the resulting build is not used for anything, it's just for checking if the build is working
     needs: setup
