--- a/package.json
+++ b/package.json
@@ -25,62 +25,67 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.2",
-    "@prisma/client": "^6.4.1",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@t3-oss/env-nextjs": "^0.12.0",
+    "@hookform/resolvers": "4.1.2",
+    "@prisma/client": "6.4.1",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-radio-group": "1.2.3",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-switch": "1.1.3",
+    "@t3-oss/env-nextjs": "0.12.0",
     "@tailwindcss/postcss": "4.0.8",
-    "@tanstack/react-query": "^5.66.9",
-    "@trpc/client": "^11.0.0-rc.446",
-    "@trpc/react-query": "^11.0.0-rc.446",
-    "@trpc/server": "^11.0.0-rc.446",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.4.7",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.475.0",
-    "next": "^15.1.7",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "server-only": "^0.0.1",
-    "sonner": "^2.0.1",
-    "superjson": "^2.2.2",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "@tanstack/react-query": "5.66.9",
+    "@trpc/client": "11.0.0-rc.446",
+    "@trpc/react-query": "11.0.0-rc.446",
+    "@trpc/server": "11.0.0-rc.446",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "framer-motion": "12.4.7",
+    "geist": "1.3.1",
+    "lucide-react": "0.475.0",
+    "next": "15.1.7",
+    "next-themes": "0.4.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.54.2",
+    "server-only": "0.0.1",
+    "sonner": "2.0.1",
+    "superjson": "2.2.2",
+    "tailwind-merge": "3.0.2",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/eslint": "^9.6.1",
-    "@types/node": "^22.13.5",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.25.0",
-    "@typescript-eslint/parser": "^8.25.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-config-next": "^15.1.7",
-    "husky": "^9.1.7",
-    "jsdom": "^26.0.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.4.1",
-    "tailwindcss": "^4.0.8",
-    "typescript": "^5.7.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.7"
+    "@eslint/eslintrc": "3.3.0",
+    "@eslint/js": "9.21.0",
+    "@next/eslint-plugin-next": "15.1.7",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/eslint": "9.6.1",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@typescript-eslint/eslint-plugin": "8.25.0",
+    "@typescript-eslint/parser": "8.25.0",
+    "@vitejs/plugin-react": "4.3.4",
+    "eslint": "9.21.0",
+    "eslint-config-next": "15.1.7",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "husky": "9.1.7",
+    "jsdom": "26.0.0",
+    "postcss": "8.5.3",
+    "prettier": "3.5.2",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "prisma": "6.4.1",
+    "tailwindcss": "4.0.8",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.25.0",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.0.7"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
