feat: implement ai-generated report for adoption strategy using agents

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "4.1.2",
+    "@langchain/core": "0.3.40",
+    "@langchain/openai": "0.4.4",
     "@prisma/client": "6.4.1",
     "@radix-ui/react-checkbox": "1.1.4",
     "@radix-ui/react-dropdown-menu": "2.1.6",
