--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@
 DATABASE_URL="postgresql://username:secret_password@localhost:5432/database_name?pgbouncer=true"
 # Direct connection to the database. Used for migrations.
 DIRECT_URL="postgresql://username:secret_password@localhost:5432/database_name"
+
+OPENAI_API_KEY=secret_api_key
