--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "superjson": "2.2.2",
     "tailwind-merge": "3.0.2",
     "tailwindcss-animate": "1.0.7",
+    "uuid": "11.1.0",
     "zod": "3.24.2"
   },
   "devDependencies": {
@@ -72,6 +73,7 @@
     "@types/node": "22.13.5",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.25.0",
     "@typescript-eslint/parser": "8.25.0",
     "@vitejs/plugin-react": "4.3.4",
