test: add playwright tests

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "prepare": "husky",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "@hookform/resolvers": "4.1.2",
@@ -65,6 +69,7 @@
     "@eslint/eslintrc": "3.3.0",
     "@eslint/js": "9.21.0",
     "@next/eslint-plugin-next": "15.1.7",
+    "@playwright/test": "1.50.1",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
