--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,6 +61,49 @@ jobs:
       - name: Setup database
         run: pnpm run db:push
 
+  playwright-tests:
+    runs-on: ubuntu-latest
+    # We can run this in parallel with the build job since we're using dev server
+    # Removed the "needs: build-and-test" dependency
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ai_readiness_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      # Removed the build step since we're using the dev server
+
+      - name: Setup database
+        run: pnpm run db:push
+
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
